overlays/dev/2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: 2048-app
