overlays/dev/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-deployment
spec:
  replicas:  2
  selector:
    matchLabels:
      app: 2048-app
  template:
    metadata:
      labels:
        app: 2048-app
        env: dev
    spec:
      containers:
        - name: 2048-app
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: 2048-app
