overlays/dev/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "service-2048-dev"
  name: "service-2048"
