overlays/dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ambassador-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
    #service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "stack=dev,purpose=ingress,service-name=dev-elb"
